--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "bitespeed",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "./dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node ./dist/app.js"
   },
+  
   "author": "anukul kumar",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "typescript": "^5.1.6"
   }
 }
