--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,36 @@
-package-lock.json
-
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-*.env
-
-# Dependency directories
-/.pnp/
-.pnp.js
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# OS generated files
-.DS_Store
-Thumbs.db
+# Compiled output
+dist/
 
-# Output of 'npm run build'
-/dist
+# Dependency directories
+node_modules/
+jspm_packages/
+package-lock.json
 
-# dotenv environment variables file
+# Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-# dotenv environment variables file that should remain in the repository
-# Make sure to change 'your-secret-key' to your actual secret key
-.env.example
-!/.env.example
-
-# IDE files
+# Editor/IDE specific files
 .vscode/
 .idea/
+
+# Compiled TypeScript files
+*.js
+*.js.map
+
+# macOS
+.DS_Store
+
+# Temporary files
+*.tmp
+*.swp
+
+# Windows
+Thumbs.db
+
+# Project specific files (adjust as needed)
+/coverage/
+/tests/reports/
